# qt-material-widgets

./: .gitignore  CMakeLists.txt
chat/: CMakeLists.txt  main.cpp
chat/components/: captchawidget.cpp  captchawidget.h  loginwindow.cpp  loginwindow.h
components/: CMakeLists.txt  qtmaterialappbar.cpp  qtmaterialautocomplete.cpp  qtmaterialautocomplete_internal.cpp  qtmaterialbadge.cpp  qtmaterialcircularprogress.cpp  qtmaterialflatbutton.cpp  qtmaterialtextfield.cpp  qtmaterialtextfield_internal.cpp
components/lib/: qtmaterialoverlaywidget.cpp
examples/: CMakeLists.txt  autocompletesettingseditor.cpp  examples.pro
